# AQ_PC_style

./: AQ_PC_style.code-workspace  README.md  diagram.json  platformio.ini  wokwi.toml
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_DateTimeScreen.c  ui_DateTimeScreen.h  ui_HomeScreen.c  ui_HomeScreen.h  ui_LoadingScreen.c  ui_LoadingScreen.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_TempHumScreen.c  ui_TempHumScreen.h  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/images/: ui_img_appearence_png.c  ui_img_appearenceicon_png.c  ui_img_aq_pc_style_bf_png.c  ui_img_aq_pc_style_bg2_png.c  ui_img_aq_pc_style_screen1_png.c  ui_img_datascreen2_png.c  ui_img_datascreen_420_320_png.c  ui_img_datascreen_png.c  ui_img_date_and_time_png.c  ui_img_datetimeicon_png.c  ui_img_datetimescreenmainframe_png.c  ui_img_datetimesettings_png.c  ui_img_datetimetabactive_png.c  ui_img_datetimetabinactive_png.c  ui_img_default_screen_png.c  ui_img_enterbuttonactive_png.c  ui_img_homeframe_png.c  ui_img_hometabactive_png.c  ui_img_hometabinactive_png.c  ui_img_hourarrow_png.c  ui_img_initialnetworksetting_png.c  ui_img_loader_ind_2_png.c  ui_img_loader_ind_3_png.c  ui_img_loader_ind__1_png.c  ui_img_loading_screen_png.c  ui_img_loadingbar_png.c  ui_img_loadingbox1_png.c  ui_img_loadingbox2_png.c  ui_img_loadingbox3_png.c  ui_img_loadingscreenframe_png.c  ui_img_main_app_frame_png.c  ui_img_mainscreenbg_png.c  ui_img_minimalscreen_png.c  ui_img_minutearrow_png.c  ui_img_network_connections_png.c  ui_img_networkconnectionsscreen_png.c  ui_img_networkicon_png.c  ui_img_nextbutton_active_png.c  ui_img_nextbuttonactive_png.c  ui_img_pcscreenupdated_png.c  (+9 more)
src/ui/screens/: ui_DataScreen.c  ui_LoadingScreen.c  ui_Screen1.c
src/ui/ui_custom/: calendar_table.cpp  calendar_table.h  (+2 more)
(+73 files in other folders)
